# snapchain

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bug_report.md  build.rs  config.toml  docker-compose.mainnet.yml  docker-compose.read.yml  docker-compose.testnet.yml  docker-compose.yml  validators-mainnet.toml  validators.toml  verification_removal_process.md  verification_removal_process_detailed.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-build-impl.yml  docker-build.yml  docker-cache-gc.yml  prerelease.yml  publish.yml  verify-contract-signature-bytecode.yml  verify-erc6492-bytecode.yml  verify-impl.yml  verify.yml
benches/: snapchain_benchmark.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: eip712.rs  factory.rs  helpers.rs  main.rs
config/: sample.toml
crates/proto/: Cargo.toml  build.rs
docs/: hyper.md  pr-per-fid-mempool-limit.md
docs/proposals/: fip-validator-onboarding-testing.md
docs/runbooks/: high-message-commit-rate.md
grafana/: grafana-dashboard.json
proto/: Cargo.toml  build.rs
proto/definitions/: gossip.proto  hyper.proto  message.proto  replication.proto  request_response.proto  rpc.proto
proto/src/: lib.rs
scripts/: publish-image.sh  snapchain-bootstrap.sh  snapchain.sh
site/: .gitignore  README.md  package-lock.json  vocs.config.tsx
src/: background_jobs.rs  cfg.rs  lib.rs  main.rs  node.ts
src/api/: backfill.rs  bridge.rs  channels.rs  config.rs  conversations.rs  events.rs  feeds.rs  http.rs  indexer.rs  mod.rs  (+5 more)
tests/: client_parity_test.rs  conformance_test.rs  consensus_test.rs  quilibrium_resolver_test.rs  solana_derivation_test.rs  solana_resolver_test.rs
(+261 files in other folders)
